--- a/apps/pwa-table-pagination/src/index.html
+++ b/apps/pwa-table-pagination/src/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <title>PwaTablePagination</title>
-    <base href="/"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-    <link rel="manifest" href="manifest.webmanifest">
+
+<head>
+  <meta charset="utf-8" />
+  <title>PwaTablePagination</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
-  <body>
-    <angular-firebase-showcase-root></angular-firebase-showcase-root>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
+
+<body>
+  <afs-root></afs-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+
 </html>
